--- a/scenarioDfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioDfr/weather/warnings/ottawa-report_e.html
@@ -104,7 +104,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container nvbar">
 	<h2>Menu des sujets</h2>
     <div class="row">
-        <ul class="list-inline menu">
+      <ul class="list-inline menu">
             <li><a href="https://www.canada.ca/fr/services/emplois.html">Emplois</a></li>
             <li><a href="http://www.cic.gc.ca/francais/index.asp">Immigration</a></li>
             <li><a href="https://voyage.gc.ca">Voyage</a></li>
@@ -118,26 +118,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
-	<h2>Vous êtes ici :</h2>
-	<div class="container">
-	<div class="row">
-		<ol class="breadcrumb">
-		<li><a href="../../weather/en.html">Accueil</a></li><li><a href="../../weather/services/environment.html">Environnement et ressources naturelles</a></li><li><a href="../../weather/index_e.html">Information météo</a></li>
-<li><a href="../../weather/mainmenu/alert_menu_e.html">Alertes</a></li>
-<li><a href="../../weather/warnings/index_e.html">Avertissements, veilles et bulletins</a></li>
-<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - sud</a></li>
-		</ol>
-	</div>
-</div>
-</nav>
 
-<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+
+<nav role="navigation" id="wb-bc"  property="breadcrumb">
 	<h2>You are here:</h2>
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="../../../weather/en.html">Accueil</a></li><li>...</li>
+		<li><a href="../../../weather/en.html">Accueil</a></li><li>&hellip;</li>
 		<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - sud</a></li>
 		</ol>
 	</div>
@@ -201,12 +189,60 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </h1>
 
 <div class="row">
-	 <div class="col-xs-12">
+	 <div class="col-md-4 col-xs-12">
 
-    <h2>Veilles</h2> <p><span id="ottawatest">17h00 HAE le jeudi 24 août 2017</span><br/> <strong>Veille d’orages violents en vigueur pour :</strong> </p> 
-<ul> <li>Ottawa (Kanata - Orléans), ON</li> <li>Ottawa (Richmond - Metcalfe), ON</li></ul>
- <p>Les conditions sont propices à la formation d’orages violents en après-midi et en soirée.<br/><br/>Une masse d’air instable au sud-ouest entraînera des orages cet après-midi et ce soir. Certains de ces orages pourraient devenir violents, les principales menaces étant des grêlons de la taille d’une pièce d’un dollar et des précipitations d’au plus 50 mm.</p>
- <p>La montée rapide des eaux des rivières et des ruisseaux peut emporter des ponts, des ponceaux, des bâtiments et des gens. Les averses de gros grêlons peuvent endommager des propriétés, briser des fenêtres, abîmer des véhicules et causer des blessures graves. La formation d’un orage peut donner lieu à des éclairs intenses. N’oubliez pas que les orages violents peuvent produire des tornades. Les averses abondantes peuvent causer des crues soudaines et des accumulations d’eau sur les routes. La foudre tue et blesse des Canadiens chaque année. N’oubliez pas de vous mettre à l’abri lorsque le tonnerre gronde!<br/><br/>Des veilles d’orages violents sont diffusées lorsque les conditions atmosphériques sont propices à la formation d’orages pouvant produire des gros grêlons, des vents destructeurs ou des pluies torrentielles.<br/><br/>Veuillez continuer à surveiller les alertes et les prévisions émises par Environnement Canada. Pour signaler du temps violent, envoyez un courriel à ec.storm.ec@canada.ca ou publiez un gazouillis en utilisant le mot-clic #NTMétéo.</p>
+    <h2>Veilles</h2> <p><span id="ottawatest">17h00 HAE le jeudi 24 août 2017</span><br/> 
+    
+    <strong>Veille d’orages violents en vigueur pour :</strong> </p> 
+<ul> 
+<li>Ottawa (Kanata - Orléans), ON</li> 
+<li>Ottawa (Richmond - Metcalfe), ON</li>
+</ul>
+
+<strong>La formation d’orages pouvant produire :</strong> </p> 
+<ul> 
+
+<li>Gros grêlons</li> 
+<li>Précipitations d’au plus 50 mm</li>
+<li>Crues soudaines/accumulations d’eau</li>
+<li>Les vents violents</li>
+<li>Risque de foudre</li>
+<li>Peuvent produire des tornades</li>
+
+</ul>
+
+<section class="alert alert-warning">
+ <p><a href="../../weather/lightning/ONT-index_e.html" class="alert-link">Carte du risque de foudre</a>. La foudre tue et blesse des Canadiens chaque année. </p>
+</section>
+
+</div> <!-- end row -->
+
+<div class="col-md-8 hidden-xs" style="padding-top: 45px !important; padding-bottom: 25px !important">
+
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
+
+</div>
+
+<div class="col-xs-12 visible-xs">
+
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
+
+</div>
+
+
+<div class="col-xs-12">
+
+
+ <p>Les conditions sont propices à la formation d’orages violents en après-midi et en soirée.</p> 
+ 
+ <p>Une masse d’air instable au sud-ouest entraînera des orages cet après-midi et ce soir. Certains de ces orages pourraient devenir violents, les principales menaces étant des grêlons de la taille d’une pièce d’un dollar et des précipitations d’au plus 50 mm.</p>
+ 
+ <p> Des veilles d’orages violents sont diffusées lorsque les conditions atmosphériques sont propices à la formation d’orages pouvant produire des gros grêlons, des vents destructeurs ou des pluies torrentielles.</p>
+ 
+ <p>La montée rapide des eaux des rivières et des ruisseaux peut emporter des ponts, des ponceaux, des bâtiments et des gens. Les averses de gros grêlons peuvent endommager des propriétés, briser des fenêtres, abîmer des véhicules et causer des blessures graves. La formation d’un orage peut donner lieu à des éclairs intenses. N’oubliez pas que les orages violents peuvent produire des tornades. Les averses abondantes peuvent causer des crues soudaines et des accumulations d’eau sur les routes. La foudre tue et blesse des Canadiens chaque année. N’oubliez pas de vous mettre à l’abri lorsque le tonnerre gronde!</p>
+ 
+ 
+ <p>Veuillez continuer à surveiller les alertes et les prévisions émises par Environnement Canada. Pour signaler du temps violent, envoyez un courriel à ec.storm.ec@canada.ca ou publiez un gazouillis en utilisant le mot-clic #NTMétéo.</p>
 
  
  
