--- a/scenarioTfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioTfr/weather/warnings/ottawa-report_e.html
@@ -104,7 +104,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container nvbar">
 	<h2>Menu des sujets</h2>
     <div class="row">
-        <ul class="list-inline menu">
+      <ul class="list-inline menu">
             <li><a href="https://www.canada.ca/fr/services/emplois.html">Emplois</a></li>
             <li><a href="http://www.cic.gc.ca/francais/index.asp">Immigration</a></li>
             <li><a href="https://voyage.gc.ca">Voyage</a></li>
@@ -219,13 +219,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <div class="col-md-8 hidden-xs" style="padding-top: 45px !important; padding-bottom: 25px !important">
 
-<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholder.gif"  /> </a>
 
 </div>
 
 <div class="col-xs-12 visible-xs">
 
-<a href="../../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
+<a href="../../weather/radar/xft-index_e.html"> <img class="img-responsive center-block" src="../data/radar/detailed/temp_image/placeholdermobile.gif"  /> </a>
 
 </div>
 
