--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -201,7 +201,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			
 			<p style="margin-right: 0px !important">
 				<span class="temp">20&deg;C</span> <span class="description">Mostly cloudy</span><br />
-				<span class="lop">&lt; 40% likelihood of precip.</span> </br>
+				<span class="lop">&lt; 40% chance of precipitation</span> </br>
 				<span class="rainfall" >Rainfall: <b>&lt; 1 mm </b></span>
 			</p>
 
@@ -942,7 +942,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	 <div class="row">
 	 
 		<div class="col-sm-1 hour">	
-			<p style="margin-bottom: 0px;">11:00pm</p>	
+			<p style="margin-bottom: 0px;">12:00pm</p>	
 		</div><!-- .col -->
 	 
 	<div class="col-sm-6 conditions">
